@@ -6,7 +6,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.perfcake</groupId>
    <artifactId>perfcake</artifactId>
-   <version>1.0.1</version>
+   <version>2.0</version>
    <parent>
       <groupId>org.sonatype.oss</groupId>
       <artifactId>oss-parent</artifactId>
@@ -25,7 +25,7 @@
       <url>https://github.com/PerfCake/PerfCake</url>
       <connection>scm:git:git://github.com/PerfCake/PerfCake.git</connection>
       <developerConnection>scm:git:git@github.com:PerfCake/PerfCake.git</developerConnection>
-      <tag>v1.0.1</tag>
+      <tag>v2.0</tag>
    </scm>
    <developers>
       <developer>
@@ -136,6 +136,12 @@
          <artifactId>commons-cli</artifactId>
          <version>1.2</version>
       </dependency>
+      <!-- Web socket -->
+      <dependency>
+         <groupId>javax.websocket</groupId>
+         <artifactId>javax.websocket-api</artifactId>
+         <version>1.0</version>
+      </dependency>
    </dependencies>
    <build>
       <resources>
@@ -237,8 +243,14 @@
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <configuration>
-                  <mainClass>org.perfcake.ScenarioExecution</mainClass>
+                  <executable>java</executable>
                   <arguments>
+                     <argument>-Djava.ext.dirs=${basedir}/lib/ext</argument>
+                     <argument>-Dlog4j.configuration=file://${basedir}/src/main/resources/log4j.xml</argument>
+                     <argument>-ea</argument>
+                     <argument>-cp</argument>
+                     <classpath/>
+                     <argument>org.perfcake.ScenarioExecution</argument>
                      <argument>-s</argument>
                      <argument>${scenario}</argument>
                      <argument>-sd</argument>
@@ -263,6 +275,9 @@
                            <include>*.log</include>
                         </includes>
                         <followSymlinks>false</followSymlinks>
+                     </fileset>
+                     <fileset>
+                        <directory>${basedir}/test-output</directory>
                      </fileset>
                   </filesets>
                </configuration>
